# rs

./: .gitignore  Cargo.toml  Makefile
argparse/docopt/: docopt.rs
argparse/getopts/: getopts.rs
basics/: readme.md
basics/actix-gcd/src/: main.rs
basics/function/: block.rs
basics/rust_by_example/03/: 03_01.rs
basics/rustlings/: quiz1.rs  readme.md
basics/rustlings/move_semantics/: move_semantics1.rs  move_semantics2.rs  move_semantics3.rs
desktop/vanilla_text/: Cargo.toml
desktop/vanilla_text/src/: main.rs
logging/log/: log.rs
multithread/src/: main.rs
parallel_programming/deadlock/src/: main.rs
pocket/: Bmods.rs  Cargo.toml  rust.snippets  tips.md  tips.rs
pocket/src/: Bmods.rs  main.rs
server/: count-server.rs  simple_server.rs
snippets/: Cargo.toml  rust.snippets
template/: template.rs
