[package]
name = "rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
getopts = "0.2"
docopt = "1"
serde = { version = "1", features = ["derive"] }
log = "0.4"

[[bin]]
name = "getopts"
path = "argparse/getopts/getopts.rs"


[[bin]]
name = "template"
path = "template/template.rs"

[[bin]]
name = "docopt"
path = "argparse/docopt/docopt.rs"


[[bin]]
name = "log"
path = "logging/log/log.rs"
