#
# FileName:     Cargo
# Author:       8ucchiman
# CreatedDate:  2023-05-24 12:23:33
# LastModified: 2023-05-24 12:23:33
# Reference:    8ucchiman.jp
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# Description:  ---
#


#[workspace]
#members = ["Source/Rust/generic", "Source/Rust/apple", "Source/Rust/java"]


[package]
name = "hoge"
version = "0.1.0"
edition = "2021"
authors = ["Yuki Iwabuchi 8ucchiman@gmail.com"]

#[lib]
#name = "example"
#path = "Source/Rust/universal/lib.rs"
#crate-type = ["staticlib", "cdylib", "rlib"]

[features]
#apple = ["example-apple"]
#java = ["example-java"]

[profile.release]
#debug = true

[dependencies]
#example-generic = { path = "Source/Rust/generic" }
#example-apple = { path = "Source/Rust/apple", optional = true }
#example-java = { path = "Source/Rust/java", optional = true }

